[package]
name = "ent-rs"
version = "0.1.1"
edition = "2021"
description = "A Rust library for analyzing entropy, randomness, and statistical structure of binary data"
readme = "README.md"
license = "MIT"
authors = ["Håkan Blomqvist <blomqvist@gmail.com>"]
repository = "https://github.com/chbtoys/ent-rs"
keywords = ["entropy", "compression", "statistics", "randomness", "analysis"]
categories = ["command-line-utilities", "data-structures", "science"]
documentation = "https://docs.rs/ent-rs"
exclude = ["/.github", "/target", "*.log", "*.tmp"]

[dependencies]
statrs = "0.16"

[lib]
name = "ent_rs"
path = "src/lib.rs"
